--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -17,6 +17,7 @@ $color-darkred: #b71c1c;
     color: #fff;
   }
   width: fit-content;
+  font-size: 0.9rem;
 }
 
 body {
@@ -30,7 +31,7 @@ body {
   box-sizing: border-box;
 }
 
-input {
+input, textarea {
   background: none;
   outline: none;
   border: none;
@@ -57,7 +58,6 @@ a {
   padding: 1rem;
   cursor: pointer;
   position: relative;
-  margin: 1rem auto;
 }
 
 .movie-director {
@@ -101,6 +101,32 @@ a {
       }
     }
   }
+}
+
+.movie-item {
+  position: relative;
+  margin: 1rem auto;
+
+  a.movie-link {
+    position: absolute;
+    left: 0; top: 0; bottom: 0; right: 0;
+    background-color: transparent;
+    z-index: 3;
+  }
+}
+
+.card-action {
+  display: flex;
+  a {
+    font-size: 0.8rem;
+    &:first-child {
+      margin-right: 10px;
+    }
+  }
+}
+
+.mt {
+  margin-top: 15px;;
 }
 
 .saved-list h3 {
@@ -184,10 +210,7 @@ footer {
 // Buttons
 .btn {
   @extend %button;
-
-  &-save {
-
-  }
+  z-index: 15;
 
   &-primary{
     background-color: $color-primary;
@@ -200,6 +223,7 @@ footer {
   &-danger {
     background-color: $color-red;
     color: #fff;
+    border-color: $color-darkred;
     &:hover {
         background-color: $color-darkred;
     }
@@ -208,4 +232,89 @@ footer {
   &.small {
     padding: 6px 15px;
   }
+}
+
+// FORM
+
+.form {
+  width: 100%;
+  max-width: 450px;
+  margin: 0 auto 20px;
+  box-shadow: 1px 1px 10px rgba(0,0,0,0.25);
+  background-color: #fff;
+  padding: 16px;
+}
+
+.form-control, textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  padding: 15px;
+  margin-bottom: 1rem;
+  transition: .3s;
+  font-size: 0.9rem;
+  &:focus {
+    box-shadow: 1px 1px 10px rgba(0,0,0,0.25);
+    border-color: transparent;
+  }
+}
+
+label {
+  font-size: 0.8rem;
+  color: rgb(88, 88, 88);
+}
+
+.textarea {
+  width: 100%;
+  height: 150px;
+  border-radius: 4px;
+}
+
+.error {
+  width: 100%;
+  background-color: rgba($color: $color-darkred, $alpha: 0.8);
+  color: #fff;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+
+.stars {
+  margin-bottom: 15px;
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ddd;
+    padding: 0 10px;
+  }
+}
+
+.star {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid #ccc;
+  padding: 0 10px;
+  &:last-child {
+    border-bottom: 1px solid #ccc;
+  }
+  &-name {
+    width: 70%;
+  }
+  .form-control {
+    margin: 7.5px 0;
+    border-radius: 4px;
+    padding: 6px 15px;
+    margin-right: 7.5px;
+  }
+}
+
+.btn-danger.action {
+  margin-left: 10px;
+}
+
+.action {
+  width: 30px; height: 30px;
+  border-radius: 4px;
+  padding: 0px;
 }
