--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -37,6 +37,8 @@ input, textarea {
   border: none;
 }
 
+h4 {margin: 15px 0;}
+
 button {
   background: none;
   outline: none;
@@ -277,7 +279,6 @@ label {
   padding: 15px;
   margin-bottom: 15px;
 }
-
 .stars {
   margin-bottom: 15px;
   .header {
