--- a/client/src/components/Navbar/navbar.scss
+++ b/client/src/components/Navbar/navbar.scss
@@ -4,7 +4,9 @@
     align-items: center;
     width: 100%;
     height: 60px;
-    box-shadow: 1px 1px 10px -1px rgba(0,0,0,0.25);
+    -webkit-box-shadow: -1px 9px 5px -1px rgba(0,0,0,0.26);
+    -moz-box-shadow: -1px 9px 5px -1px rgba(0,0,0,0.26);
+    box-shadow: -1px 9px 5px -1px rgba(0,0,0,0.26);
     background-color: #512da8;
     color: #ffffff;
     position: fixed;
@@ -35,6 +37,9 @@
     transition: 0.5s;
     padding-top: 60px;
     z-index: 1000;
+    -webkit-box-shadow: 10px 0px 5px -1px rgba(0,0,0,0.26);
+    -moz-box-shadow: 10px 0px 5px -1px rgba(0,0,0,0.26);
+    box-shadow: 10px 0px 5px -1px rgba(0,0,0,0.26);
 
     a {
         padding: 8px 8px 8px 32px;
